--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 
-
-API_BASE_URL=http://192.168.1.9:8080
-WS_BASE_URL=ws://192.168.1.9:8080/ws/v1/env/query
+API_BASE_URL=https://hisatochii.id.vn/api/v1
+WS_BASE_URL=ws://hisatochii.id.vn/api/v1/ws/v1/env/query
 DEFAULT_ROOM_KIT01=kit-01
 
